<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#50000000"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_name"
            android:textColor="#fff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_user_name"
            android:inputType="text"
            android:textColor="#fff"
            android:textColorHint="#c0c0c0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_password"
            android:textColor="#fff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_register_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="#fff"
            android:textColorHint="#c0c0c0" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_phone"
            android:textColor="#fff"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_register_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hint_user_phone"
                android:inputType="phone"
                android:textColor="#fff"
                android:textColorHint="#c0c0c0" />

            <Button
                android:id="@+id/btn_register_getcode"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="#ffe4c4"
                android:gravity="center"
                android:onClick="send_message"
                android:text="@string/send_code" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/user_code"
            android:textColor="#fff"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_register_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_code"
            android:inputType="number"
            android:textColor="#fff"
            android:textColorHint="#c0c0c0" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="#90ee90"
            android:onClick="Register"
            android:text="@string/sign_up" />
    </LinearLayout>
</LinearLayout>